--- a/beta/products/index.html
+++ b/beta/products/index.html
@@ -60,14 +60,13 @@
       </p>
     </section>
 
-    <!-- 상품 카드 그리드 -->
+    <!-- 상품 카드 섹션 -->
     <section class="products-section">
       <h2 class="products-section__title">부동산 유형별 온투업 대출상품</h2>
 
-      <!-- 여기서부터 6개 카드 모두 product-hub 안에 묶음 -->
-      <div class="product-hub">
+      <section class="product-hub">
 
-        <!-- 카드 1: 아파트 -->
+        <!-- 카드 1: 아파트담보대출 -->
         <article class="product-card">
           <h2 class="product-card__title">아파트담보대출</h2>
           <p class="product-card__desc">
@@ -92,7 +91,7 @@
             <span class="product-tag">#온투업대출</span>
           </div>
 
-          <!-- 상세 버튼들 -->
+          <!-- 버튼들 -->
           <div class="product-card__buttons">
             <a href="/beta/products/apt-general.html" class="product-btn">
               일반담보대출 상세보기
@@ -112,126 +111,171 @@
           </div>
         </article>
 
-        <!-- 카드 2: 빌라/연립 -->
+        <!-- 카드 2: 빌라·연립 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">
-            빌라·연립 담보대출 · 지분대출
-          </h3>
+          <h3 class="product-card__title">빌라·연립 담보대출</h3>
           <p class="product-card__desc">
-            빌라대출, 연립대출, <strong>빌라담보대출, 연립담보대출</strong>뿐 아니라
-            지분만 가진 경우 활용하는 <strong>빌라지분대출, 연립지분대출</strong> 구조를
-            실제 온투업 사례 기준으로 정리합니다.
+            빌라·연립을 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
+            임대보증금반환대출, 대부업대환대출 구조를 실제 온투업 사례 기준으로 정리합니다.
           </p>
-          <ul class="product-card__bullets">
-            <li>빌라대출한도 · 빌라대출금리, 연립대출한도 개념 정리</li>
-            <li>빌라주담대, 연립주담대와 후순위주담대의 차이</li>
-            <li>임대보증금반환, 전세보증금반환, 임차보증금반환 목적 지분대출</li>
-          </ul>
+
+          <!-- 해시태그 -->
           <div class="product-card__tags">
-            <span>#빌라대출</span>
-            <span>#빌라담보대출</span>
-            <span>#빌라지분대출</span>
-            <span>#빌라주담대</span>
-            <span>#빌라대출금리</span>
-            <span>#빌라대출한도</span>
-            <span>#연립대출</span>
-            <span>#연립담보대출</span>
-            <span>#연립지분대출</span>
-            <span>#연립주담대</span>
+            <span class="product-tag">#빌라대출</span>
+            <span class="product-tag">#빌라담보대출</span>
+            <span class="product-tag">#빌라지분대출</span>
+            <span class="product-tag">#빌라주담대</span>
+            <span class="product-tag">#빌라대출금리</span>
+            <span class="product-tag">#빌라대출한도</span>
+            <span class="product-tag">#연립대출</span>
+            <span class="product-tag">#연립담보대출</span>
+            <span class="product-tag">#연립지분대출</span>
+            <span class="product-tag">#연립주담대</span>
+            <span class="product-tag">#임대보증금반환</span>
+            <span class="product-tag">#전세보증금반환</span>
+            <span class="product-tag">#임차보증금반환</span>
           </div>
-          <a href="/beta/products/villa-rowhouse.html" class="product-card__link">
-            빌라·연립 담보대출 상품 (베타) 자세히 보기
-          </a>
+
+          <!-- 버튼들 -->
+          <div class="product-card__buttons">
+            <a href="/beta/products/villa-general.html" class="product-btn">
+              일반담보대출 상세보기
+            </a>
+            <a href="/beta/products/villa-share.html" class="product-btn">
+              지분담보대출 상세보기
+            </a>
+            <a href="/beta/products/villa-auction.html" class="product-btn">
+              경락잔금대출 상세보기
+            </a>
+            <a href="/beta/products/villa-deposit-return.html" class="product-btn">
+              임대보증금반환대출 상세보기
+            </a>
+            <a href="/beta/products/villa-highrate-refi.html" class="product-btn">
+              대부업대환대출 상세보기
+            </a>
+          </div>
         </article>
 
-        <!-- 카드 3: 단독/다가구 -->
+        <!-- 카드 3: 단독·다가구 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">
-            단독주택·다가구주택 담보대출
-          </h3>
+          <h3 class="product-card__title">단독주택·다가구주택 담보대출</h3>
           <p class="product-card__desc">
-            대지와 건물 구조가 복잡한 단독·다가구의
-            <strong>단독주택담보대출, 단독주택지분대출, 단독주택주담대</strong>를 정리하고,
-            후순위담보대출, 대환대출, 채무통합 사례를 함께 설명합니다.
+            대지와 건물 구조가 복잡한 단독·다가구주택을 담보로 한
+            일반담보대출, 지분담보대출, 경락잔금대출, 임대보증금반환대출,
+            대부업대환대출 구조를 정리합니다.
           </p>
-          <ul class="product-card__bullets">
-            <li>단독주택대출한도 · 단독주택대출금리</li>
-            <li>단독주택대환대출, 채무통합, 연체해결 사례</li>
-            <li>보증금담보대출, 임대보증금반환 자금 마련 구조</li>
-          </ul>
+
+          <!-- 해시태그 -->
           <div class="product-card__tags">
-            <span>#단독주택대출</span>
-            <span>#단독주택담보대출</span>
-            <span>#단독주택지분대출</span>
-            <span>#단독주택주담대</span>
-            <span>#단독주택대출한도</span>
-            <span>#단독주택대출금리</span>
-            <span>#채무통합</span>
-            <span>#연체해결</span>
+            <span class="product-tag">#단독주택대출</span>
+            <span class="product-tag">#단독주택담보대출</span>
+            <span class="product-tag">#단독주택지분대출</span>
+            <span class="product-tag">#단독주택주담대</span>
+            <span class="product-tag">#단독주택대출한도</span>
+            <span class="product-tag">#단독주택대출금리</span>
+            <span class="product-tag">#채무통합</span>
+            <span class="product-tag">#연체해결</span>
+            <span class="product-tag">#임대보증금반환</span>
           </div>
-          <a href="/beta/products/detached-house.html" class="product-card__link">
-            단독·다가구 담보대출 상품 (베타) 자세히 보기
-          </a>
+
+          <!-- 버튼들 -->
+          <div class="product-card__buttons">
+            <a href="/beta/products/detached-general.html" class="product-btn">
+              일반담보대출 상세보기
+            </a>
+            <a href="/beta/products/detached-share.html" class="product-btn">
+              지분담보대출 상세보기
+            </a>
+            <a href="/beta/products/detached-auction.html" class="product-btn">
+              경락잔금대출 상세보기
+            </a>
+            <a href="/beta/products/detached-deposit-return.html" class="product-btn">
+              임대보증금반환대출 상세보기
+            </a>
+            <a href="/beta/products/detached-highrate-refi.html" class="product-btn">
+              대부업대환대출 상세보기
+            </a>
+          </div>
         </article>
 
-        <!-- 카드 4: 토지/임야 -->
+        <!-- 카드 4: 토지·임야 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">
-            토지담보대출 · 임야담보대출
-          </h3>
+          <h3 class="product-card__title">토지담보대출 · 임야담보대출</h3>
           <p class="product-card__desc">
-            <strong>토지담보대출, 토지지분대출, 임야대출, 임야지분대출</strong>처럼
-            토지·임야를 담보로 하는 온투업 대출 구조와
-            개발계획, 지목, 용도지역에 따라 LTV가 어떻게 달라지는지 정리합니다.
+            토지·임야를 담보로 한 일반담보대출, 지분담보대출, 경락잔금대출,
+            대부업대환대출 구조와 개발계획, 지목, 용도지역에 따라
+            LTV가 어떻게 달라지는지 정리합니다.
           </p>
-          <ul class="product-card__bullets">
-            <li>토지·임야 담보대출 LTV, DSR 적용 여부, DSR미적용 사례</li>
-            <li>p2p대출 vs 대부업대출금리 비교</li>
-            <li>추가한도, 대부대환대출, 대부대출대환 구조 설명</li>
-          </ul>
+
+          <!-- 해시태그 -->
           <div class="product-card__tags">
-            <span>#토지담보대출</span>
-            <span>#토지지분대출</span>
-            <span>#임야대출</span>
-            <span>#임야지분대출</span>
-            <span>#p2p대출</span>
-            <span>#DSR미적용</span>
+            <span class="product-tag">#토지담보대출</span>
+            <span class="product-tag">#토지지분대출</span>
+            <span class="product-tag">#임야대출</span>
+            <span class="product-tag">#임야지분대출</span>
+            <span class="product-tag">#p2p대출</span>
+            <span class="product-tag">#DSR미적용</span>
+            <span class="product-tag">#추가한도</span>
+            <span class="product-tag">#대부대환대출</span>
           </div>
-          <a href="/beta/products/land-forest.html" class="product-card__link">
-            토지·임야 담보대출 상품 (베타) 자세히 보기
-          </a>
+
+          <!-- 버튼들 (임대보증금반환대출은 제외: 네가 정의한 4종 구조) -->
+          <div class="product-card__buttons">
+            <a href="/beta/products/land-forest-general.html" class="product-btn">
+              일반담보대출 상세보기
+            </a>
+            <a href="/beta/products/land-forest-share.html" class="product-btn">
+              지분담보대출 상세보기
+            </a>
+            <a href="/beta/products/land-forest-auction.html" class="product-btn">
+              경락잔금대출 상세보기
+            </a>
+            <a href="/beta/products/land-forest-highrate-refi.html" class="product-btn">
+              대부업대환대출 상세보기
+            </a>
+          </div>
         </article>
 
-        <!-- 카드 5: 상가/근생 -->
+        <!-- 카드 5: 상가·근생 담보대출 -->
         <article class="product-card">
-          <h3 class="product-card__title">
-            상가·사무실 담보대출 (근린생활시설)
-          </h3>
+          <h3 class="product-card__title">상가·사무실 담보대출 (근린생활시설)</h3>
           <p class="product-card__desc">
-            근린생활시설, 상가, 사무실을 담보로 하는
-            <strong>상가담보대출, 지분대출</strong> 구조와
-            임대보증금반환, 전세보증금반환, 임차보증금반환 목적의
-            보증금담보대출 사례를 정리합니다.
+            근린생활시설, 상가, 사무실을 담보로 한 일반담보대출, 지분담보대출,
+            경락잔금대출, 임대보증금반환대출, 대부업대환대출 구조를 정리합니다.
           </p>
-          <ul class="product-card__bullets">
-            <li>상가담보대출 한도·금리, 대부업대출금리 비교</li>
-            <li>임대보증금반환, 전세보증금반환, 임차보증금반환 구조</li>
-            <li>중도상환수수료, 담보대출이자 계산 포인트</li>
-          </ul>
+
+          <!-- 해시태그 -->
           <div class="product-card__tags">
-            <span>#상가담보대출</span>
-            <span>#지분대출</span>
-            <span>#임대보증금반환</span>
-            <span>#전세보증금반환</span>
-            <span>#임차보증금반환</span>
-            <span>#보증금담보대출</span>
+            <span class="product-tag">#상가담보대출</span>
+            <span class="product-tag">#지분대출</span>
+            <span class="product-tag">#임대보증금반환</span>
+            <span class="product-tag">#전세보증금반환</span>
+            <span class="product-tag">#임차보증금반환</span>
+            <span class="product-tag">#보증금담보대출</span>
+            <span class="product-tag">#대부업대출금리</span>
           </div>
-          <a href="/beta/products/commercial.html" class="product-card__link">
-            상가·사무실 담보대출 상품 (베타) 자세히 보기
-          </a>
+
+          <!-- 버튼들 -->
+          <div class="product-card__buttons">
+            <a href="/beta/products/commercial-general.html" class="product-btn">
+              일반담보대출 상세보기
+            </a>
+            <a href="/beta/products/commercial-share.html" class="product-btn">
+              지분담보대출 상세보기
+            </a>
+            <a href="/beta/products/commercial-auction.html" class="product-btn">
+              경락잔금대출 상세보기
+            </a>
+            <a href="/beta/products/commercial-deposit-return.html" class="product-btn">
+              임대보증금반환대출 상세보기
+            </a>
+            <a href="/beta/products/commercial-highrate-refi.html" class="product-btn">
+              대부업대환대출 상세보기
+            </a>
+          </div>
         </article>
 
-        <!-- 카드 6: 후순위/경락/대환 -->
+        <!-- 카드 6: 후순위·경락·대환 (기존 구조 유지, 원하면 나중에 버튼형으로 쪼개자) -->
         <article class="product-card">
           <h3 class="product-card__title">
             후순위주담대 · 경락잔금대출 · 대환대출
@@ -266,7 +310,7 @@
           </a>
         </article>
 
-      </div> <!-- /.product-hub -->
+      </section>
     </section>
 
     <!-- 하단 안내 카드 -->
@@ -327,7 +371,7 @@
   </footer>
 
   <script>
-    // 베타 메뉴 토글 (admin-beta에서 쓰던 패턴과 동일)
+    // 베타 메뉴 토글
     document.addEventListener('DOMContentLoaded', function () {
       const toggle = document.getElementById('betaMenuToggle');
       const panel  = document.getElementById('betaMenuPanel');
