--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -47,18 +47,26 @@
     </div>
   </header>
 
+    <!-- 허브로 돌아가기 버튼 -->
+      <div style="margin-top:12px;">
+        <a href="/beta/products/" class="product-btn">
+          < 뒤로가기
+        </a>
+      </div>
+    </section>
+            
   <main class="products-main">
     <!-- 히어로 영역 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온투업/P2P)</h1>
+      <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온라인투자연계금융업/P2P)</h1>
       <p class="products-hero__desc">
-        후추에서 정리한 <strong>온투업(P2P) 아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
+        후추에서 정리한 <strong>온라인투자연계금융업</strong)(이하 "온투업") <strong>아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
         은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우
         <strong>후순위주담대, 온투업 아파트담보대출</strong>을 어떻게 활용할 수 있는지 구조를 정리합니다.
         <br /><br />
-        이 페이지는 실제 온투업 사례를 바탕으로
+        이 페이지는 <strong>실제 온투업의 대출 사례</strong>를 바탕으로
         <strong>아파트대출한도, 아파트대출금리, 후순위주담대한도</strong>를 이해할 수 있도록 돕는
-        <strong>정보 제공용 베타 콘텐츠</strong>입니다. (대출 실행은 각 온투업사 심사 결과에 따라 달라질 수 있습니다.)
+        <strong>정보 제공용 콘텐츠</strong>입니다. (대출한도 등 관련 문의는 각 온투업사에 문의하세요)
       </p>
 
       <!-- 태그 블록 (SEO 키워드 노출용) -->
@@ -77,15 +85,7 @@
         <span class="product-tag">#담보대출계산기</span>
       </div>
 
-      <!-- 허브로 돌아가기 버튼 -->
-      <div style="margin-top:12px;">
-        <a href="/beta/products/" class="product-btn">
-          ← 온투업 대출상품정보 허브로 돌아가기
-        </a>
-      </div>
-    </section>
-
-    <!-- 섹션 1: 상품 개요 -->
+        <!-- 섹션 1: 상품 개요 -->
     <section class="products-section">
       <h2 class="products-section__title">1. 아파트 일반담보대출 상품 개요</h2>
       <article class="product-info-card">
