--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -61,8 +61,7 @@
       <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온라인투자연계금융업/P2P)</h1>
       <p class="products-hero__desc">
         후추에서 정리한 <strong>온라인투자연계금융업</strong)(이하 "온투업") <strong>아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
-        은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우
-        <strong>후순위주담대, 온투업 아파트담보대출</strong>을 어떻게 활용할 수 있는지 구조를 정리합니다.
+        은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우에 이용할 수 있습니다.
         <br /><br />
         이 페이지는 <strong>실제 온투업의 대출 사례</strong>를 바탕으로
         <strong>아파트대출한도, 아파트대출금리, 후순위주담대한도</strong>를 이해할 수 있도록 돕는
