--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -63,28 +63,11 @@
         후추에서 정리한 <strong>온라인투자연계금융업</strong)(이하 "온투업") <strong>아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
         은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우에 이용할 수 있습니다.
         <br /><br />
-        이 페이지는 <strong>실제 온투업의 대출 사례</strong>를 바탕으로
-        <strong>아파트대출한도, 아파트대출금리, 후순위주담대한도</strong>를 이해할 수 있도록 돕는
-        <strong>정보 제공용 콘텐츠</strong>입니다. (대출한도 등 관련 문의는 각 온투업사에 문의하세요)
+        이 페이지는 <strong>온투업에서 취급중인 부동산 담보대출상품</strong>과 <strong>실제 대출 사례</strong>를 바탕으로 구성된 단순
+        <strong>정보 제공용 콘텐츠</strong>입니다. (대출한도 등 관련 문의는 온투업사에 문의하세요~)
       </p>
 
-      <!-- 태그 블록 (SEO 키워드 노출용) -->
-      <div class="product-card__tags" style="margin-top:10px;">
-        <span class="product-tag">#아파트대출</span>
-        <span class="product-tag">#아파트담보대출</span>
-        <span class="product-tag">#아파트주담대</span>
-        <span class="product-tag">#아파트대출한도</span>
-        <span class="product-tag">#아파트대출금리</span>
-        <span class="product-tag">#후순위주담대</span>
-        <span class="product-tag">#후순위담보대출</span>
-        <span class="product-tag">#후순위주담대한도</span>
-        <span class="product-tag">#후순위대출금리</span>
-        <span class="product-tag">#P2P주담대</span>
-        <span class="product-tag">#온투업대출</span>
-        <span class="product-tag">#담보대출계산기</span>
-      </div>
-
-        <!-- 섹션 1: 상품 개요 -->
+         <!-- 섹션 1: 상품 개요 -->
     <section class="products-section">
       <h2 class="products-section__title">1. 아파트 일반담보대출 상품 개요</h2>
       <article class="product-info-card">
@@ -332,7 +315,23 @@
         </a>
       </div>
     </section>
-  </main>
+
+   <!-- 태그 블록 (SEO 키워드 노출용) -->
+      <div class="product-card__tags" style="margin-top:10px;">
+        <span class="product-tag">#아파트대출</span>
+        <span class="product-tag">#아파트담보대출</span>
+        <span class="product-tag">#아파트주담대</span>
+        <span class="product-tag">#아파트대출한도</span>
+        <span class="product-tag">#아파트대출금리</span>
+        <span class="product-tag">#후순위주담대</span>
+        <span class="product-tag">#후순위담보대출</span>
+        <span class="product-tag">#후순위주담대한도</span>
+        <span class="product-tag">#후순위대출금리</span>
+        <span class="product-tag">#P2P주담대</span>
+        <span class="product-tag">#온투업대출</span>
+        <span class="product-tag">#담보대출계산기</span>
+      </div>
+    </main>
 
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
