--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -58,41 +58,40 @@
   <main class="products-main">
     <!-- 히어로 영역 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온라인투자연계금융업/P2P)</h1>
+      <h1 class="products-hero__title">아파트 – 일반담보대출</h1>
       <p class="products-hero__desc">
-        후추에서 정리한 <strong>온라인투자연계금융업</strong)(이하 "온투업") <strong>아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
-        은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우에 이용할 수 있습니다.
+        <strong>온라인투자연계금융업</strong)(이하 "온투업") 에서 취급중인 <strong>아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
+        <br /><br />대상고객: 은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 개인
+        <br /><br />대출한도: 최대 20억원
         <br /><br />
-        이 페이지는 <strong>온투업에서 취급중인 부동산 담보대출상품</strong>과 <strong>실제 대출 사례</strong>를 바탕으로 구성된 단순
-        <strong>정보 제공용 콘텐츠</strong>입니다. (대출한도 등 관련 문의는 온투업사에 문의하세요~)
+        *해당 정보는 <strong>온투업에서 취급중인 부동산 담보대출상품</strong>과 <strong>실제 대출 사례</strong>를 바탕으로 구성된 단순
+        <strong>정보 제공용 콘텐츠</strong>입니다. (대출한도 등 관련 문의는 온투업사에 문의하세요.)
       </p>
-
-         <!-- 섹션 1: 상품 개요 -->
+      <br /><br />
+      
+         <!-- 섹션 1: 상품 안내 -->
     <section class="products-section">
-      <h2 class="products-section__title">1. 아파트 일반담보대출 상품 개요</h2>
+      <h2 class="products-section__title">상품 안내</h2>
       <article class="product-info-card">
         <h3>아파트 일반담보대출이란?</h3>
         <p>
           <strong>아파트 일반담보대출</strong>은
           아파트를 담보로 <strong>일반적인 주택담보대출 구조</strong>로 자금을 빌리는 상품입니다.
           <br />
-          은행·저축은행의 1순위 <strong>아파트주담대</strong>와 달리,
+          은행·저축은행·신협 등의 1순위 <strong>아파트주담대</strong>와 달리,
           온투업(P2P) 아파트담보대출은
-          <strong>후순위주담대</strong> 또는
-          <strong>1.5순위·2순위 담보대출</strong> 형태로
-          기존 대출 위에 추가로 설정되는 경우가 많습니다.
+          <strong>후순위주담대</strong> 위주로 취급되고 있으며, 기존 1순위 대출에 이어서
+          <strong>2순위 이하의 담보설정</strong> 을 통해 대출이 취급되고 있습니다.
           <br /><br />
-          이 페이지에서 말하는 “일반담보대출”은
-          지분만을 담보로 하는 <strong>아파트지분대출</strong>이나,
-          <strong>경락잔금대출, 임대보증금반환대출, 대부업대환대출</strong>이 아닌
-          표준적인 <strong>전체 아파트를 담보로 한 담보대출 구조</strong>를 의미합니다.
+          *선순위 대출인 경우에는 보다 저렴한 금리로 취급되고 있습니다.<br />
+          ** 후추에게 제공하는 온투업 전용<strong>담보대출 계산기</strong>를 통해 대출가능 여부를 사전에 확인할 수 있습니다.
         </p>
       </article>
     </section>
 
     <!-- 섹션 2: 기본 조건 요약 (표 형태) -->
     <section class="products-section">
-      <h2 class="products-section__title">2. 기본 대출 조건 요약</h2>
+      <h2 class="products-section__title">2. 대출 조건 요약</h2>
       <article class="product-info-card">
         <h3>아파트 일반담보대출 기본 틀</h3>
         <p style="margin-bottom:8px;">
