--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -1,84 +1,313 @@
-/* ======================= 아파트 상품상세 – 상품안내 레이아웃 ======================= */
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>아파트담보대출(일반담보대출) | 온투업 P2P 주담대 상품정보 (베타)</title>
+  <meta name="description" content="아파트를 담보로 한 온투업(P2P) 일반담보대출 상품의 한도, 금리, 상환 방식, 후순위주담대 구조를 정리한 베타 설명 페이지입니다. 아파트담보대출, 아파트대출한도, 아파트대출금리, 후순위주담대, 대부대환대출 비교.">
+  <!-- 베타용: 검색엔진 인덱싱 방지 -->
+  <meta name="robots" content="noindex, nofollow" />
 
-.product-detail{
-  margin-top:8px;
-  background:#ffffff;
-  border-radius:18px;
-  border:1px solid #e5e7eb;
-  box-shadow:0 6px 18px rgba(15,23,42,.06);
-}
+  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+</head>
+<body class="beta-body">
 
-/* 상단 파란 탭(상품안내) */
-.product-detail-tab{
-  display:inline-block;
-  padding:6px 16px;
-  border-radius:10px 10px 0 0;
-  background:#1d4ed8;
-  color:#ffffff;
-  font-size:13px;
-  font-weight:800;
-  margin-left:16px;
-  transform:translateY(-1px);
-}
+  <!-- 상단 헤더 (베타 공통) -->
+  <header class="huchu-header beta-header" role="banner">
+    <div class="huchu-header__inner beta-header__inner">
+      <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
+        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
+        <span class="logo-fallback">
+          <span class="logo-mark">%</span>
+          <span class="logo-text">후추 Huchu</span>
+        </span>
+      </a>
 
-.product-detail-inner{
-  padding:14px 18px 18px;
-  border-top:1px solid #e5e7eb;
-}
+      <div class="beta-menu">
+        <button id="betaMenuToggle"
+                class="beta-menu-toggle"
+                type="button"
+                aria-haspopup="true"
+                aria-expanded="false">
+          <span class="beta-menu-toggle__icon">
+            <span></span><span></span><span></span>
+          </span>
+          <span class="beta-menu-toggle__label">MENU</span>
+        </button>
 
-/* 2열 구조 */
-.product-detail-row{
-  display:flex;
-  padding:10px 0;
-  border-top:1px solid #e5e7eb;
-}
-.product-detail-row:first-child{
-  border-top:none;
-}
+        <div id="betaMenuPanel" class="beta-menu-panel hide">
+          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/beta/products/">온투업 대출상품정보(베타)</a>
+          <a class="beta-menu-link" href="/">담보대출 계산기</a>
+          <a class="beta-menu-link" href="/company.html">회사소개</a>
+          <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+          <a class="beta-menu-link" href="/beta/admin-beta.html">관리자(베타)</a>
+        </div>
+      </div>
+    </div>
+  </header>
 
-.product-detail-label{
-  flex:0 0 90px;
-  font-size:13px;
-  font-weight:800;
-  color:#111827;
-  padding-top:4px;
-}
+  <main class="products-main">
 
-.product-detail-body{
-  flex:1;
-  font-size:13px;
-  line-height:1.6;
-  color:#4b5563;
-}
+    <!-- 섹션 1. 히어로 영역(카드형 그대로 유지) -->
+    <section class="products-hero">
+      <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온투업/P2P)</h1>
+      <p class="products-hero__desc">
+        후추에서 정리한 <strong>온투업(P2P) 아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
+        은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우
+        <strong>후순위주담대, 온투업 아파트담보대출</strong>을 어떻게 활용할 수 있는지 구조를 정리합니다.
+        <br /><br />
+        이 페이지는 실제 온투업 사례를 바탕으로
+        <strong>아파트대출한도, 아파트대출금리, 후순위주담대한도</strong>를 이해할 수 있도록 돕는
+        <strong>정보 제공용 베타 콘텐츠</strong>입니다. (대출 실행은 각 온투업사 심사 결과에 따라 달라질 수 있습니다.)
+      </p>
 
-/* 본문 안 작은 제목 – 왼쪽 파란 라인 */
-.product-detail-body__title{
-  margin:0 0 4px;
-  padding-left:8px;
-  border-left:3px solid #2563eb;
-  font-weight:800;
-  color:#111827;
-  font-size:13px;
-}
+      <!-- 태그 블록 (SEO 키워드 노출용) -->
+      <div class="product-card__tags" style="margin-top:10px;">
+        <span class="product-tag">#아파트대출</span>
+        <span class="product-tag">#아파트담보대출</span>
+        <span class="product-tag">#아파트주담대</span>
+        <span class="product-tag">#아파트대출한도</span>
+        <span class="product-tag">#아파트대출금리</span>
+        <span class="product-tag">#후순위주담대</span>
+        <span class="product-tag">#후순위담보대출</span>
+        <span class="product-tag">#후순위주담대한도</span>
+        <span class="product-tag">#후순위대출금리</span>
+        <span class="product-tag">#P2P주담대</span>
+        <span class="product-tag">#온투업대출</span>
+        <span class="product-tag">#담보대출계산기</span>
+      </div>
 
-/* 리스트 공통 */
-.product-detail-list{
-  margin:4px 0 0 14px;
-  padding:0;
-}
-.product-detail-list li+li{
-  margin-top:2px;
-}
+      <!-- 허브로 돌아가기 버튼 -->
+      <div style="margin-top:12px;">
+        <a href="/beta/products/" class="product-btn">
+          ← 온투업 대출상품정보 허브로 돌아가기
+        </a>
+      </div>
+    </section>
 
-/* FAQ 스타일 */
-.product-detail-faq-q{
-  margin:10px 0 2px;
-  font-weight:800;
-  color:#111827;
-  font-size:13px;
-}
-.product-detail-faq-a{
-  margin:0 0 4px;
-  font-size:13px;
-  color:#4b5563;
-}
+    <!-- ============================================================
+         섹션 2 이후: ‘상품안내’ 2열 표 형식 레이아웃
+         ============================================================ -->
+    <section class="products-section">
+      <div class="product-detail">
+        <div class="product-detail-tab">상품안내</div>
+        <div class="product-detail-inner">
+
+          <!-- 2-1. 상품개요 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">상품개요</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">아파트를 담보로 하는 온투업 일반담보대출</p>
+              <ul>
+                <li>아파트 전체를 담보로 설정하는 <strong>표준 담보대출 구조</strong></li>
+                <li>은행·저축은행 1순위 주담대 이후 <strong>후순위주담대(1.5~2순위)</strong>로 취급되는 경우가 많음</li>
+                <li>지분만을 담보로 하는 <strong>아파트지분대출</strong>이나
+                  <strong>경락잔금대출·임대보증금반환대출·대부업대환대출</strong>과는 별도 상품</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-2. 대출고객 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">대출고객</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">주로 이런 경우에 많이 이용</p>
+              <ul>
+                <li>이미 1순위 <strong>아파트주담대</strong>가 있으나, 추가 사업·투자·세금 자금이 필요한 차주</li>
+                <li>고금리 <strong>대부업대출</strong>을 이용 중이고,
+                    아파트담보대출 구조로 <strong>대부대환대출</strong>을 검토하는 차주</li>
+                <li><strong>경락잔금대출, 임대보증금반환대출, 지분대출</strong> 등과 함께
+                    복합 구조로 설계하고 싶은 차주</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-3. 대출조건 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">대출조건</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">기본 심사·취급 조건(예시)</p>
+              <ul class="product-detail-list">
+                <li><strong>담보 대상</strong> : 아파트(공동주택) – KB시세, 실거래가, 감정가 등을 기준으로 평가</li>
+                <li><strong>선순위 채권</strong> : 은행·저축은행 주담대, 전세보증금, 기타 근저당 등 포함하여 합산</li>
+                <li><strong>최대 LTV</strong> : 지역·상품별로 상이하나,
+                    수도권 아파트 기준 <strong>총 LTV 70~80% 이내</strong>에서 후순위주담대 한도 산정</li>
+                <li><strong>대출 금리</strong> : 대략 연 <strong>6% 후반 ~ 15%대</strong> 구간  
+                    (P2P주담대규제, 투자자 수요, 담보 위치, 신용·소득 등에 따라 달라짐)</li>
+                <li><strong>대출 기간</strong> : 통상 1~3년(연장 옵션 포함), 일부 상품은 5년 이상 구조도 존재</li>
+                <li><strong>상환 방식</strong> : 만기일시상환, 원리금균등상환, 만기 일부분할상환 등 상품별 상이</li>
+                <li><strong>중도상환수수료</strong> : 온투업·대부업 구조 특성상 존재하는 경우가 많아,
+                    조기상환 예정 시 반드시 확인 필요</li>
+                <li><strong>취급 지역</strong> : 수도권·광역시 위주, 일부 온투업사는 지방 아파트도 심사</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-4. 대출한도 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">대출한도</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">LTV 기준 추가한도 산정</p>
+              <p>
+                아파트담보대출 한도는 기본적으로
+                <strong>담보가치 × 허용 LTV − 선순위 채권액</strong>으로 계산됩니다.
+              </p>
+              <ul class="product-detail-list">
+                <li><strong>기본 공식</strong>  
+                  아파트대출한도(추가한도) ≒ 아파트 시세 × 허용 LTV − 선순위 채권액
+                </li>
+                <li><strong>예시</strong>  
+                  · 아파트 시세 10억  
+                  · 선순위(은행 주담대) 6억  
+                  · 온투업 허용 LTV 80%  
+                  → 이론상 추가한도 ≒ <strong>2억</strong>
+                </li>
+                <li>실제 취급 한도는 연체 이력, 소득, 지역, 상품 구조 등에 따라 가감 조정</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-5. 이용사례 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">이용사례</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">실무에서 자주 보는 케이스</p>
+              <ul class="product-detail-list">
+                <li><strong>사업·투자·세금 자금</strong> : 법인·개인 사업 운영자금, 추가 투자금, 양도소득세·상속세 납부 등</li>
+                <li><strong>대부업대출 대환</strong> : 고금리 대부업대출을
+                    온투업 아파트담보대출 구조로 갈아타는 <strong>대부대환대출</strong></li>
+                <li><strong>경락잔금·임대보증금반환과 병행</strong> :
+                    경락잔금대출, 임대보증금반환대출, 지분대출과 함께 설계하는 복합 구조</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-6. 유의사항 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">유의사항</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">온투업 아파트담보대출 이용 전 체크리스트</p>
+              <ul class="product-detail-list">
+                <li><strong>원금 손실 가능성</strong> : 온투업 특성상 연체·경매 진행 시
+                    은행과 다른 절차로 진행될 수 있음</li>
+                <li><strong>후순위 위험</strong> : 선순위 주담대·전세보증금 등이 있는 상태에서
+                    후순위로 진입하므로 담보 여유(에쿼티) 확인 필수</li>
+                <li><strong>대환 가능성</strong> : 향후 금리·소득 여건 개선 시
+                    은행·저축은행으로 <strong>대환대출</strong> 가능한지 사전 검토 필요</li>
+                <li><strong>중도상환수수료</strong> : 예상보다 빨리 상환할 경우,
+                    수수료 + 이자 비용을 합산해 전체 비용 비교</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- 2-7. FAQ -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">FAQ</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">자주 묻는 질문</p>
+
+              <p class="product-detail-faq-q">Q1. 아파트담보대출 한도는 어떻게 정해지나요?</p>
+              <p class="product-detail-faq-a">
+                기본적으로 <strong>아파트 시세 × 허용 LTV − 선순위 채권액</strong>으로
+                추가한도가 계산됩니다. 신용점수, 소득, 연체 이력, 담보 위치, 상품 구조 등에 따라
+                최종 <strong>아파트대출한도</strong>는 조정될 수 있습니다.
+              </p>
+
+              <p class="product-detail-faq-q">Q2. 아파트대출금리는 어느 정도인가요?</p>
+              <p class="product-detail-faq-a">
+                온투업 <strong>P2P주담대</strong> 특성상 은행·저축은행보다
+                <strong>후순위대출금리</strong>가 높은 편입니다.
+                대략 연 6% 후반~15%대 구간에서 책정되는 경우가 많으며,
+                <strong>후순위주담대한도, DSR 적용 여부, 대부업대출금리와의 비교</strong>가 중요합니다.
+              </p>
+
+              <p class="product-detail-faq-q">Q3. 지분대출·경락잔금대출과는 무엇이 다른가요?</p>
+              <p class="product-detail-faq-a">
+                이 페이지의 “일반담보대출”은 <strong>전체 아파트를 담보</strong>로 한 구조를 설명합니다.
+                지분만 보유한 경우의 <strong>아파트지분대출</strong>이나
+                경매 낙찰 후 잔금을 마련하는 <strong>경락잔금대출</strong>은
+                별도 구조이므로, 각각의 상품 상세 페이지에서 따로 확인하는 것이 좋습니다.
+              </p>
+            </div>
+          </div>
+
+          <!-- 2-8. 담보대출계산기 안내 -->
+          <div class="product-detail-row">
+            <div class="product-detail-label">계산기</div>
+            <div class="product-detail-body">
+              <p class="product-detail-body__title">후추 담보대출계산기와 함께 확인</p>
+              <p>
+                후추 <strong>담보대출계산기</strong>를 이용하면
+                <strong>아파트 LTV, 추가한도, 후순위주담대한도</strong>를 간단히 시뮬레이션해 볼 수 있습니다.
+                실제 온투업·대부업 상담 전 구조를 이해하는 데 도움이 되며,
+                <strong>대부업대환대출, 경락잔금대출, 임대보증금반환대출</strong> 등 다른 상품과 비교할 때도 유용합니다.
+              </p>
+              <p style="margin-top:6px;">
+                👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
+                  후추 담보대출계산기 바로가기
+                </a>
+              </p>
+            </div>
+          </div>
+
+        </div><!-- /.product-detail-inner -->
+      </div><!-- /.product-detail -->
+    </section>
+
+    <!-- 하단에 허브로 돌아가기 버튼 한 번 더 -->
+    <section class="products-section">
+      <div style="text-align:left;">
+        <a href="/beta/products/" class="product-btn">
+          ← 온투업 대출상품정보 허브로 돌아가기
+        </a>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="beta-footer" role="contentinfo">
+    <div class="beta-footer__top">
+      <a href="/company.html">회사소개</a>
+      <a href="/terms.html">서비스이용약관</a>
+      <a href="/privacy.html">개인정보 취급방침</a>
+    </div>
+    <div class="beta-footer__bottom">
+      <div class="beta-footer__brand">
+        <img src="/assets/logo/huchu-logo-white.png"
+             alt="HUCHU 로고"
+             class="beta-footer__logo-img" />
+        <span class="beta-footer__logo-text">HUCHU</span>
+      </div>
+      <div class="beta-footer__info">
+        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
+        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
+        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // 베타 메뉴 토글 (허브/관리자와 동일 패턴)
+    document.addEventListener('DOMContentLoaded', function () {
+      const toggle = document.getElementById('betaMenuToggle');
+      const panel  = document.getElementById('betaMenuPanel');
+      if (!toggle || !panel) return;
+
+      toggle.addEventListener('click', () => {
+        const isHidden = panel.classList.contains('hide');
+        panel.classList.toggle('hide', !isHidden);
+        toggle.setAttribute('aria-expanded', isHidden ? 'true' : 'false');
+      });
+
+      document.addEventListener('click', (e) => {
+        if (!panel.contains(e.target) && !toggle.contains(e.target)) {
+          panel.classList.add('hide');
+          toggle.setAttribute('aria-expanded', 'false');
+        }
+      });
+    });
+  </script>
+</body>
+</html>
