--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -48,18 +48,23 @@
   </header>
 
   <main class="products-main">
-
-    <!-- 섹션 1. 히어로 영역(카드형 그대로 유지) -->
+    <!-- 섹션 1. 히어로 영역 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">아파트담보대출 – 일반담보대출 (온투업/P2P)</h1>
+      <h1 class="products-hero__title">아파트 – 일반담보대출</h1>
       <p class="products-hero__desc">
-        후추에서 정리한 <strong>온투업(P2P) 아파트담보대출 중 ‘일반담보대출’</strong> 설명 페이지입니다.
-        은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 경우
-        <strong>후순위주담대, 온투업 아파트담보대출</strong>을 어떻게 활용할 수 있는지 구조를 정리합니다.
+        온라인투자연계금융업 아파트담보대출 상품 중
+        <strong>‘일반담보대출’</strong> 관련 설명입니다.
         <br /><br />
-        이 페이지는 실제 온투업 사례를 바탕으로
-        <strong>아파트대출한도, 아파트대출금리, 후순위주담대한도</strong>를 이해할 수 있도록 돕는
-        <strong>정보 제공용 베타 콘텐츠</strong>입니다. (대출 실행은 각 온투업사 심사 결과에 따라 달라질 수 있습니다.)
+        <strong>대상고객:</strong> 은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 개인<br />
+        <strong>대출한도:</strong> 1천만원 ~ 70억원<br />
+        <strong>대출약정:</strong> 대면 또는 비대면(업체별 상이)<br />
+        <strong>대출금리:</strong> 최저 6% ~ 최대 15.5%<br />
+        <strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)
+        <br /><br />
+        <em style="font-size:12px;color:#6b7280;">
+          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된
+          단순 정보 제공용 콘텐츠입니다. (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
+        </em>
       </p>
 
       <!-- 태그 블록 (SEO 키워드 노출용) -->
@@ -86,184 +91,217 @@
       </div>
     </section>
 
-    <!-- ============================================================
-         섹션 2 이후: ‘상품안내’ 2열 표 형식 레이아웃
-         ============================================================ -->
+    <!-- 섹션 2. 상세안내 -->
     <section class="products-section">
-      <div class="product-detail">
-        <div class="product-detail-tab">상품안내</div>
-        <div class="product-detail-inner">
+      <h2 class="products-section__title">2. 상세안내</h2>
+      <article class="product-info-card">
+        <h3>대출 기본 조건</h3>
 
-          <!-- 2-1. 상품개요 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">상품개요</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">아파트를 담보로 하는 온투업 일반담보대출</p>
-              <ul>
-                <li>아파트 전체를 담보로 설정하는 <strong>표준 담보대출 구조</strong></li>
-                <li>은행·저축은행 1순위 주담대 이후 <strong>후순위주담대(1.5~2순위)</strong>로 취급되는 경우가 많음</li>
-                <li>지분만을 담보로 하는 <strong>아파트지분대출</strong>이나
-                  <strong>경락잔금대출·임대보증금반환대출·대부업대환대출</strong>과는 별도 상품</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출대상</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>만 19세 이상 내국인</li>
+          <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
+          <li>KB시세 등재 아파트 또는 주상복합</li>
+          <li>본인 혹은 배우자 소득이 있는 고객</li>
+        </ul>
 
-          <!-- 2-2. 대출고객 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">대출고객</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">주로 이런 경우에 많이 이용</p>
-              <ul>
-                <li>이미 1순위 <strong>아파트주담대</strong>가 있으나, 추가 사업·투자·세금 자금이 필요한 차주</li>
-                <li>고금리 <strong>대부업대출</strong>을 이용 중이고,
-                    아파트담보대출 구조로 <strong>대부대환대출</strong>을 검토하는 차주</li>
-                <li><strong>경락잔금대출, 임대보증금반환대출, 지분대출</strong> 등과 함께
-                    복합 구조로 설계하고 싶은 차주</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출한도</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>최소 1천만원 ~ 최대 70억원</li>
+        </ul>
 
-          <!-- 2-3. 대출조건 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">대출조건</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">기본 심사·취급 조건(예시)</p>
-              <ul class="product-detail-list">
-                <li><strong>담보 대상</strong> : 아파트(공동주택) – KB시세, 실거래가, 감정가 등을 기준으로 평가</li>
-                <li><strong>선순위 채권</strong> : 은행·저축은행 주담대, 전세보증금, 기타 근저당 등 포함하여 합산</li>
-                <li><strong>최대 LTV</strong> : 지역·상품별로 상이하나,
-                    수도권 아파트 기준 <strong>총 LTV 70~80% 이내</strong>에서 후순위주담대 한도 산정</li>
-                <li><strong>대출 금리</strong> : 대략 연 <strong>6% 후반 ~ 15%대</strong> 구간  
-                    (P2P주담대규제, 투자자 수요, 담보 위치, 신용·소득 등에 따라 달라짐)</li>
-                <li><strong>대출 기간</strong> : 통상 1~3년(연장 옵션 포함), 일부 상품은 5년 이상 구조도 존재</li>
-                <li><strong>상환 방식</strong> : 만기일시상환, 원리금균등상환, 만기 일부분할상환 등 상품별 상이</li>
-                <li><strong>중도상환수수료</strong> : 온투업·대부업 구조 특성상 존재하는 경우가 많아,
-                    조기상환 예정 시 반드시 확인 필요</li>
-                <li><strong>취급 지역</strong> : 수도권·광역시 위주, 일부 온투업사는 지방 아파트도 심사</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">대출기간</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>6개월 ~ 24개월</li>
+        </ul>
 
-          <!-- 2-4. 대출한도 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">대출한도</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">LTV 기준 추가한도 산정</p>
-              <p>
-                아파트담보대출 한도는 기본적으로
-                <strong>담보가치 × 허용 LTV − 선순위 채권액</strong>으로 계산됩니다.
-              </p>
-              <ul class="product-detail-list">
-                <li><strong>기본 공식</strong>  
-                  아파트대출한도(추가한도) ≒ 아파트 시세 × 허용 LTV − 선순위 채권액
-                </li>
-                <li><strong>예시</strong>  
-                  · 아파트 시세 10억  
-                  · 선순위(은행 주담대) 6억  
-                  · 온투업 허용 LTV 80%  
-                  → 이론상 추가한도 ≒ <strong>2억</strong>
-                </li>
-                <li>실제 취급 한도는 연체 이력, 소득, 지역, 상품 구조 등에 따라 가감 조정</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">상환방법</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>만기일시상환</li>
+        </ul>
 
-          <!-- 2-5. 이용사례 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">이용사례</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">실무에서 자주 보는 케이스</p>
-              <ul class="product-detail-list">
-                <li><strong>사업·투자·세금 자금</strong> : 법인·개인 사업 운영자금, 추가 투자금, 양도소득세·상속세 납부 등</li>
-                <li><strong>대부업대출 대환</strong> : 고금리 대부업대출을
-                    온투업 아파트담보대출 구조로 갈아타는 <strong>대부대환대출</strong></li>
-                <li><strong>경락잔금·임대보증금반환과 병행</strong> :
-                    경락잔금대출, 임대보증금반환대출, 지분대출과 함께 설계하는 복합 구조</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">만기연장</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>연장 가능</li>
+          <li style="list-style:none;margin-left:-18px;font-size:12px;color:#6b7280;">
+            *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
+            연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
+          </li>
+        </ul>
 
-          <!-- 2-6. 유의사항 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">유의사항</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">온투업 아파트담보대출 이용 전 체크리스트</p>
-              <ul class="product-detail-list">
-                <li><strong>원금 손실 가능성</strong> : 온투업 특성상 연체·경매 진행 시
-                    은행과 다른 절차로 진행될 수 있음</li>
-                <li><strong>후순위 위험</strong> : 선순위 주담대·전세보증금 등이 있는 상태에서
-                    후순위로 진입하므로 담보 여유(에쿼티) 확인 필수</li>
-                <li><strong>대환 가능성</strong> : 향후 금리·소득 여건 개선 시
-                    은행·저축은행으로 <strong>대환대출</strong> 가능한지 사전 검토 필요</li>
-                <li><strong>중도상환수수료</strong> : 예상보다 빨리 상환할 경우,
-                    수수료 + 이자 비용을 합산해 전체 비용 비교</li>
-              </ul>
-            </div>
-          </div>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">플랫폼수수료</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
+        </ul>
 
-          <!-- 2-7. FAQ -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">FAQ</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">자주 묻는 질문</p>
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">기타·부대비용</h4>
+        <ul style="margin:0 0 8px 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>근저당권 설정 관련 비용</li>
+          <li>대출금 입금 시 차감 또는 이자와 함께 납부</li>
+          <li>대출심사 결과에 따라 수수료율 및 분할 납부 개월 수 차등 적용</li>
+        </ul>
 
-              <p class="product-detail-faq-q">Q1. 아파트담보대출 한도는 어떻게 정해지나요?</p>
-              <p class="product-detail-faq-a">
-                기본적으로 <strong>아파트 시세 × 허용 LTV − 선순위 채권액</strong>으로
-                추가한도가 계산됩니다. 신용점수, 소득, 연체 이력, 담보 위치, 상품 구조 등에 따라
-                최종 <strong>아파트대출한도</strong>는 조정될 수 있습니다.
-              </p>
-
-              <p class="product-detail-faq-q">Q2. 아파트대출금리는 어느 정도인가요?</p>
-              <p class="product-detail-faq-a">
-                온투업 <strong>P2P주담대</strong> 특성상 은행·저축은행보다
-                <strong>후순위대출금리</strong>가 높은 편입니다.
-                대략 연 6% 후반~15%대 구간에서 책정되는 경우가 많으며,
-                <strong>후순위주담대한도, DSR 적용 여부, 대부업대출금리와의 비교</strong>가 중요합니다.
-              </p>
-
-              <p class="product-detail-faq-q">Q3. 지분대출·경락잔금대출과는 무엇이 다른가요?</p>
-              <p class="product-detail-faq-a">
-                이 페이지의 “일반담보대출”은 <strong>전체 아파트를 담보</strong>로 한 구조를 설명합니다.
-                지분만 보유한 경우의 <strong>아파트지분대출</strong>이나
-                경매 낙찰 후 잔금을 마련하는 <strong>경락잔금대출</strong>은
-                별도 구조이므로, 각각의 상품 상세 페이지에서 따로 확인하는 것이 좋습니다.
-              </p>
-            </div>
-          </div>
-
-          <!-- 2-8. 담보대출계산기 안내 -->
-          <div class="product-detail-row">
-            <div class="product-detail-label">계산기</div>
-            <div class="product-detail-body">
-              <p class="product-detail-body__title">후추 담보대출계산기와 함께 확인</p>
-              <p>
-                후추 <strong>담보대출계산기</strong>를 이용하면
-                <strong>아파트 LTV, 추가한도, 후순위주담대한도</strong>를 간단히 시뮬레이션해 볼 수 있습니다.
-                실제 온투업·대부업 상담 전 구조를 이해하는 데 도움이 되며,
-                <strong>대부업대환대출, 경락잔금대출, 임대보증금반환대출</strong> 등 다른 상품과 비교할 때도 유용합니다.
-              </p>
-              <p style="margin-top:6px;">
-                👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
-                  후추 담보대출계산기 바로가기
-                </a>
-              </p>
-            </div>
-          </div>
-
-        </div><!-- /.product-detail-inner -->
-      </div><!-- /.product-detail -->
+        <h4 style="margin:8px 0 4px;font-size:13px;font-weight:800;color:#111827;">중도상환수수료</h4>
+        <ul style="margin:0 0 0 18px;font-size:13px;color:#4b5563;line-height:1.6;">
+          <li>중도상환금액 × 0% ~ 1.00% (업체별 상이)</li>
+        </ul>
+      </article>
     </section>
 
-    <!-- 하단에 허브로 돌아가기 버튼 한 번 더 -->
+    <!-- 섹션 3~5: 기존 설명 그대로 유지 -->
     <section class="products-section">
-      <div style="text-align:left;">
-        <a href="/beta/products/" class="product-btn">
-          ← 온투업 대출상품정보 허브로 돌아가기
-        </a>
+      <h2 class="products-section__title">3. 아파트대출한도 · 후순위주담대한도 계산 방식</h2>
+      <article class="product-info-card">
+        <h3>1) 기본 공식 – LTV를 기준으로 한 추가한도</h3>
+        <p>
+          아파트담보대출 한도는 결국
+          <strong>LTV(Loan To Value, 담보인정비율)</strong>를 기준으로 결정됩니다.
+          <br /><br />
+          <strong>아파트대출한도(추가한도) ≒ 아파트 시세 × 허용 LTV − 선순위 채권액</strong>
+          <br />
+          여기서 <strong>허용 LTV</strong>는 은행·저축은행 규제와는 별도로,
+          각 온투업사 내부 기준에 따라 정해집니다.
+          <br />
+          예를 들어,
+        </p>
+        <ul>
+          <li>아파트 시세: 10억</li>
+          <li>선순위 대출 (은행 주담대): 6억</li>
+          <li>온투업 허용 LTV: 80%</li>
+        </ul>
+        <p>
+          라면, 이론상 추가한도는 <strong>10억 × 80% − 6억 = 2억</strong> 수준에서 검토됩니다.
+          (실제 취급 한도는 연체 이력, 소득, 지역, 상품 구조 등에 따라 조정)
+        </p>
+
+        <h3 style="margin-top:12px;">2) 후순위주담대와 DSR, 대부업대출과의 차이</h3>
+        <p>
+          후순위주담대는 <strong>기존 1순위 주담대 이후에 설정되는 담보대출</strong>이기 때문에
+          은행권 DSR 규제를 피하기 위해 이용하는 경우가 많습니다.
+          <br />
+          일부 온투업 상품은 <strong>DSR미적용</strong>인 대신,
+          <strong>후순위대출금리</strong>가 상대적으로 높은 편이라
+          대부업대출금리와의 비교가 필요합니다.
+          <br /><br />
+          단순히 금리만 비교하지 말고,
+          <strong>중도상환수수료, 연체 이자, 만기 구조, 채무통합 가능성</strong>까지 함께 보아야
+          전체적인 비용을 제대로 판단할 수 있습니다.
+        </p>
+      </article>
+    </section>
+
+    <section class="products-section">
+      <h2 class="products-section__title">4. 아파트 일반담보대출을 많이 찾는 상황</h2>
+      <div class="products-info-grid">
+        <article class="product-info-card">
+          <h3>1) 사업·투자·세금 자금이 급할 때</h3>
+          <p>
+            이미 1순위 <strong>아파트주담대</strong>가 있는 상황에서
+            추가로 <strong>운영자금, 사업자금, 세금 납부 자금</strong>이 필요한 경우,
+            후순위주담대를 통해 <strong>추가한도</strong>를 확보하는 수요가 많습니다.
+          </p>
+        </article>
+        <article class="product-info-card">
+          <h3>2) 대부업대출 대환이 필요한 경우</h3>
+          <p>
+            기존에 이용 중인 <strong>대부업대출</strong> 금리가 매우 높은 경우,
+            아파트담보대출 구조로 갈아타는 <strong>대부대환대출</strong>을 검토하기도 합니다.
+            이때는 <strong>아파트대출금리</strong>뿐 아니라
+            <strong>각종 수수료와 중도상환수수료</strong>를 함께 비교해야 합니다.
+          </p>
+        </article>
+        <article class="product-info-card">
+          <h3>3) 경락잔금·임대보증금반환 등과 함께 설계</h3>
+          <p>
+            <strong>경락잔금대출, 임대보증금반환대출, 지분대출</strong>과
+            함께 설계되는 복합 구조도 많습니다.
+            이 페이지는 <strong>“일반담보대출”</strong> 중심 설명이지만,
+            아파트지분대출, 경락잔금대출 페이지와 함께 보시면
+            보다 입체적인 구조 이해에 도움이 됩니다.
+          </p>
+        </article>
       </div>
     </section>
 
+    <section class="products-section">
+      <h2 class="products-section__title">5. 이용 전 꼭 확인해야 할 사항</h2>
+      <article class="product-info-card">
+        <h3>온투업 아파트담보대출 이용 시 체크리스트</h3>
+        <ul>
+          <li><strong>원금 손실 가능성</strong> – 온투업 투자 구조 특성상, 연체·경매 진행 시 절차가 은행과 다를 수 있습니다.</li>
+          <li><strong>후순위 위험</strong> – 이미 선순위 주담대, 전세보증금 등이 있는 상태에서 후순위로 진입하는 만큼,
+            담보 여유(에쿼티)가 충분한지 확인해야 합니다.</li>
+          <li><strong>대환 가능 여부</strong> – 향후 금리가 내려가거나 소득이 안정되었을 때,
+            은행·저축은행으로 <strong>대환대출</strong>이 가능한지 미리 점검하는 것이 좋습니다.</li>
+          <li><strong>중도상환수수료</strong> – 예상보다 빠르게 상환하게 될 경우,
+            수수료와 이자 비용을 합산해서 전체 비용을 비교해야 합니다.</li>
+        </ul>
+      </article>
+    </section>
+
+    <!-- 섹션 7. FAQ -->
+    <section class="products-section products-section--info">
+      <h2 class="products-section__title">7. 자주 묻는 질문 (FAQ)</h2>
+      <div class="products-info-grid">
+        <article class="product-info-card">
+          <h3>Q. 아파트담보대출 한도는 어떻게 정해지나요?</h3>
+          <p>
+            기본적으로 <strong>KB시세 × 허용 LTV − 선순위 채권액</strong>으로 한도가 계산됩니다.
+            다만, 담보 위치, 신용점수, 소득, 연체 이력 등에 따라
+            최종 대출한도는 조정될 수 있습니다.
+          </p>
+        </article>
+        <article class="product-info-card">
+          <h3>Q. 연체이력, 세금체납 이력이 있어도 대출이 가능한가요?</h3>
+          <p>
+            네. 가능한 온투업체가 있습니다.
+            다만, 연체 이력·세금 체납 이력 등에 따라
+            <strong>금리·플랫폼수수료 등 조건이 차등 적용</strong>될 수 있습니다.
+          </p>
+        </article>
+        <article class="product-info-card">
+          <h3>Q. 후추의 담보대출 계산기는 얼마나 정확한가요?</h3>
+          <p>
+            후추 담보대출계산기는 온투업에서 실제 취급했던 담보대출 정보를 기반으로
+            설계되어 있습니다. 한도 및 금리는 각 업체별 상담을 통해 최종 확정되지만,
+            <strong>대출 가능·불가능에 대한 결과는 90% 이상 정확</strong>하여
+            불필요한 상담을 피하는 데 도움이 됩니다.
+            또한 개인정보 입력 없이, 간단한 정보만으로도 계산이 가능합니다.
+          </p>
+        </article>
+      </div>
+    </section>
+
+    <!-- 섹션 8. 담보대출계산기 안내 -->
+    <section class="products-section">
+      <h2 class="products-section__title">8. 후추 담보대출계산기와 함께 확인하세요</h2>
+      <article class="product-info-card">
+        <h3>담보대출계산기로 LTV와 추가한도 먼저 체크</h3>
+        <p>
+          후추의 <strong>담보대출계산기</strong>를 이용하면
+          소유 중인 아파트에 대해
+          간단히 <strong>대출 가능 여부</strong>를 확인해 볼 수 있습니다.
+          <br />
+          실제 온투업체 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
+          대출이 가능한 경우 <strong>49개 온투업체</strong> 중
+          조건에 맞는 온투업체를 확인할 수 있습니다.
+        </p>
+        <p style="margin-top:8px;">
+          👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
+            후추 담보대출계산기 바로가기
+          </a>
+        </p>
+      </article>
+    </section>
+
+    <!-- 섹션 9. 뒤로가기 버튼 -->
+    <section class="products-section">
+      <div style="text-align:left;">
+        <a href="/beta/products/" class="product-btn">
+          ← 뒤로가기
+        </a>
+      </div>
+    </section>
   </main>
 
   <footer class="beta-footer" role="contentinfo">
