--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -39,7 +39,7 @@
       margin-top:2px;
     }
 
-    /* FAQ 카드 사이 간격 조금 더 */
+    /* FAQ / “온투업을 찾는 경우” 카드 사이 간격 */
     .products-info-grid{
       gap:16px;
     }
@@ -180,30 +180,37 @@
       </article>
     </section>
 
-    <!-- 2. 온투업(P2P)담보대출을 찾는 경우는? -->
-    <section class="products-section">
+    <!-- 2. 온투업(P2P)담보대출을 찾는 경우는? → 카드 3개로 분리 -->
+    <section class="products-section products-section--info">
       <h2 class="products-section__title">2. 온투업(P2P)담보대출을 찾는 경우는?</h2>
-      <article class="product-info-card">
-        <ul>
-          <li>
-            <strong>사업·투자·세금 자금이 급할 때</strong><br />
+      <div class="products-info-grid">
+        <article class="product-info-card">
+          <h3>사업·투자·세금 자금이 급할 때</h3>
+          <p>
             이미 1순위 대출이 있는 상황에서 수술비, 자녀결혼비용, 사업운영자금, 세금 납부 등
             급하게 목돈이 필요한 경우, 후순위주담대를 통해 자금을 확보하는 수요가 많습니다.
-          </li>
-          <li>
-            <strong>대부업대출 대환이 필요한 경우</strong><br />
-            대부업대출을 이용중에 온투업으로 대부대환대출을 고려하는 경우입니다.
-            이때는 기존 각종 수수료와 중도상환수수료를 함께 비교해야 합니다.
-          </li>
-          <li>
-            <strong>은행에서 대출이 안되서 곤란한 경우</strong><br />
-            낙찰 받은 후 자금계획이 변경된 경우, 신규 임차인을 구하기 전에
-            기존 임차인 보증금을 반환해줘야 할 때,
-            가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶을 때
-            온투업 담보대출을 고려하시는 경우가 많습니다.
-          </li>
-        </ul>
-      </article>
+          </p>
+        </article>
+
+        <article class="product-info-card">
+          <h3>대부업대출 대환이 필요한 경우</h3>
+          <p>
+            대부업대출을 이용중에 온투업으로 <strong>대부대환대출</strong>을 고려하는 경우입니다.
+          </p>
+          <p>
+            이때는 기존 대출의 각종 수수료와 <strong>중도상환수수료</strong>를 함께 비교해야 합니다.
+          </p>
+        </article>
+
+        <article class="product-info-card">
+          <h3>은행에서 대출이 안돼 곤란한 경우</h3>
+          <p>
+            낙찰 받은 후 자금계획이 변경된 경우, 신규 임차인을 구하기 전에 기존 임차인 보증금을
+            반환해줘야 할 때, 가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶을 때
+            온투업 담보대출을 고려하는 경우가 많습니다.
+          </p>
+        </article>
+      </div>
     </section>
 
     <!-- 3. 자주 묻는 질문 (FAQ) -->
