--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -110,9 +110,9 @@
       <!-- 히어로 내용을 하나의 카드 안에 정리 -->
       <article class="product-info-card">
         <p>
-          온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’</strong> 관련 설명 입니다.
+          온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
-        <p><strong>대상고객:</strong> 은행·저축은행 주택담보대출로는 한도가 부족하거나, 추가 자금이 필요한 개인</p>
+        <p><strong>대상고객:</strong> 은행권에서 더이상 한도가 없거나, 추가 자금이 필요한 개인</p>
         <p><strong>대출한도:</strong> 1천만원 ~ 70억원</p>
         <p><strong>대출약정:</strong> 대면 또는 비대면(업체별 상이)</p>
         <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
@@ -120,6 +120,8 @@
 
         <p class="hero-summary-note">
           *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+        </p>
+        <p class="hero-summary-note" style="margin-top:2px;">
           (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
         </p>
       </article>
@@ -180,7 +182,7 @@
       </article>
     </section>
 
-    <!-- 2. 온투업(P2P)담보대출을 찾는 경우는? → 카드 3개로 분리 -->
+    <!-- 2. 온투업(P2P)담보대출을 찾는 경우는? -->
     <section class="products-section products-section--info">
       <h2 class="products-section__title">2. 온투업(P2P)담보대출을 찾는 경우는?</h2>
       <div class="products-info-grid">
@@ -255,18 +257,18 @@
       </div>
     </section>
 
-    <!-- 담보대출계산기 안내 -->
+    <!-- 담보대출계산기 안내 (제목/본문 수정) -->
     <section class="products-section">
-      <h2 class="products-section__title">후추 담보대출계산기와 함께 확인하세요</h2>
+      <h2 class="products-section__title">후추 담보대출계산기로 확인하세요.</h2>
       <article class="product-info-card">
-        <h3>담보대출계산기로 LTV와 추가한도 먼저 체크</h3>
+        <h3>대출가능여부와 한도를 먼저 체크</h3>
         <p>
           후추의 <strong>담보대출계산기</strong>를 이용하면
-          소유중인 아파트에 대해 간단히 대출 가능 여부를 확인해 볼 수 있습니다.
+          소유중인 부동산에 대해 대출 가능 여부를 간편하게 확인해 볼 수 있습니다.
         </p>
         <p>
           실제 온투업체에 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
-          대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.
+          <strong>대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.</strong>
         </p>
         <p style="margin-top:8px;">
           👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
@@ -294,9 +296,9 @@
       </div>
     </section>
 
-    <!-- 뒤로가기 칩 버튼 -->
+    <!-- 뒤로가기 칩 버튼 (우측 정렬) -->
     <section class="products-section">
-      <div style="text-align:left;">
+      <div style="text-align:right;">
         <a href="/beta/products/" class="back-chip">
           &lt; 뒤로가기
         </a>
