--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -44,24 +44,24 @@
       gap:16px;
     }
 
-    /* 하단 뒤로가기 칩 버튼 */
-    .back-chip{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      padding:6px 14px;
-      border-radius:999px;
-      background:#e9d2b0;      /* 옅은 갈색 계열 */
-      border:1px solid #d7b98d;
-      color:#4b2c06;
-      font-size:12px;
-      font-weight:700;
-      text-decoration:none;
-      line-height:1;
-    }
-    .back-chip:hover{
-      background:#dec299;
-    }
+   /* 하단 뒤로가기 칩 버튼 */
+.back-chip{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  padding:6px 14px;
+  border-radius:999px;
+  background:#111827;      /* 검정에 가까운 진한 색 */
+  border:1px solid #111827;
+  color:#ffffff;           /* 텍스트 흰색 */
+  font-size:12px;
+  font-weight:700;
+  text-decoration:none;
+  line-height:1;
+}
+.back-chip:hover{
+  background:#1f2937;      /* 살짝 더 밝은 톤으로 호버 */
+}
   </style>
 </head>
 <body class="beta-body">
